# miniyt-old

./: .env.local  .eslintrc.json  .gitignore  Cargo.toml  README.md  angular.json  commitlint.config.js  justfile  miniyt  next.config.js  nuxt.config.ts  othneildrew-README-Template.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.husky/: commit-msg  pre-commit
app/: head.tsx  layout.tsx  page.tsx
app/follows/: page.tsx
components/: IINALink.tsx  IINALink.vue  NavLink.tsx  Navbar.tsx  VideoCard.tsx  VideoList.tsx
miniyt_scraper/: Cargo.toml
miniyt_scraper/src/: lib.rs
pages/: _app.js  follows.tsx  index.tsx  index.vue  videos.vue  watch.tsx
pages/follows/: index.tsx
pages/video/: [id].vue
scraper/: Cargo.toml
scripts/: route.py
src/: index.html  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs  youtube-scraper.rs  youtube_scraper.rs
src-tauri/src/commands/: fs.rs
src-tauri/src/interface/: mod.rs  user_playlist.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/components/: Btn.vue  IINALink.vue  Searchbar.vue  author-card.tsx  video-card.tsx
src/components/button/: button.component.ts
src/interfaces/: link.nav.ts
src/pages/: index.vue  videos.vue
src/routes/: channel.tsx  index.tsx  search.tsx  video.tsx
src/services/: search.service.ts
src/util/: url.ts
src/utils/: fs.ts
styles/: globals.css
utils/: fs.ts
youtube-scraper/: .gitignore  Cargo.toml  o.html  output.txt
youtube-scraper/src/: main.rs
(+21 files in other folders)
