[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.5", features = ["devtools", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "macos-private-api", "window-all"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
miniyt_scraper = { path = "../miniyt_scraper" }
serde_json = "1.0.99"
# anyhow = "1.0.69"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
